api-gw/nginx/cmbc/f5-manage02/3.2.3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-3-2-3
  namespace: f5-manage02
  annotations:
    nginx.org/keepalive: "30"
spec:
  ingressClassName: nginx
  rules:
  - host: keepalive.f5manage02.test.cmbc.com
    http:
      paths:
      - path: /coffee
        pathType: Prefix
        backend:
          service:
            name: coffee-svc
            port:
              number: 80
